--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,54 +1,216 @@
-[tool.poetry]
+[build-system]
+requires = [
+  "hatchling",
+  "cmake",
+  "ninja",
+  "grpcio-tools",
+]
+build-backend = "hatchling.build"
+
+[project]
 name = "axserve"
-version = "0.1.0"
+dynamic = ["version"]
 description = "AxServe python client that provides interfaces of COM or OCX components through a gRPC server."
-authors = ["Yunseong Hwang <kika1492@gmail.com>"]
-license = "MIT"
 readme = "README.md"
-repository = "https://github.com/elbakramer/axserve"
-packages = [
-  { include = "axserve", from = "src/python" }
+requires-python = ">=3.8.1"
+license = "MIT OR Apache-2.0 OR GPL-3.0-or-later"
+keywords = ["activex", "com", "ocx", "windows", "grpc", "qt6", "cpp", "python"]
+authors = [
+  { name = "Yunseong Hwang", email = "kika1492@gmail.com" },
+]
+maintainers = [
+  { name = "Yunseong Hwang", email = "kika1492@gmail.com" },
+]
+classifiers = [
+  "Development Status :: 2 - Pre-Alpha",
+  "License :: OSI Approved :: MIT License",
+  "License :: OSI Approved :: Apache Software License",
+  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+  "Programming Language :: C++",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: Implementation :: CPython",
+  "Programming Language :: Python :: Implementation :: PyPy",
+  "Operating System :: Microsoft :: Windows",
+  "Operating System :: Microsoft :: Windows :: Windows 11",
+  "Environment :: Console",
+  "Environment :: X11 Applications :: Qt",
+]
+dependencies = [
+  "grpcio>=1.59.3",
+  "pywin32>=306",
+  "wrapt>=1.16.0",
 ]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-grpcio = "^1.59.3"
+[project.urls]
+Documentation = "https://github.com/elbakramer/axserve#readme"
+Issues = "https://github.com/elbakramer/axserve/issues"
+Source = "https://github.com/elbakramer/axserve"
 
-[tool.poetry.group.dev.dependencies]
-grpcio-tools = "^1.59.3"
-pre-commit = "^3.5.0"
+[tool.hatch.version]
+path = "src/python/axserve/__about__.py"
 
-[tool.poetry.group.test.dependencies]
-pytest = "^7.4.3"
+[tool.hatch.build]
+exclude = ["third_party"]
+skip-excluded-dirs = true
 
-[tool.poetry.group.typing.dependencies]
-mypy = "^1.7.1"
+[tool.hatch.build.targets.wheel]
+packages = ["src/python/axserve"]
+artifacts = ["*.exe"]
+
+[tool.hatch.build.targets.wheel.hooks.custom]
+path = "hatch_build.py"
+
+[[tool.hatch.build.targets.wheel.hooks.custom.generates]]
+sources = ["src/proto/active.proto"]
+include-dirs = ["src/proto"]
+out-dir = "src/python/axserve/proto"
+
+[[tool.hatch.build.targets.wheel.hooks.custom.builds]]
+build-dir = "build/amd64-all-release"
+generator = "Ninja"
+config = "Release"
+system-processor = "AMD64"
+runtime-output-dir = "src/python/axserve/server/exe"
+output-files = ["src/python/axserve/server/exe/axserve-amd64-console-release.exe"]
+marker = "platform_system == 'Windows' and platform_machine == 'AMD64'"
+
+[[tool.hatch.build.targets.wheel.hooks.custom.builds]]
+build-dir = "build/x86-all-release"
+generator = "Ninja"
+config = "Release"
+system-processor = "x86"
+runtime-output-dir = "src/python/axserve/server/exe"
+output-files = ["src/python/axserve/server/exe/axserve-x86-console-release.exe"]
+marker = "platform_system == 'Windows' and (platform_machine == 'AMD64' or platform_machine == 'x86')"
+
+[tool.hatch.envs.default]
+dependencies = [
+  "coverage[toml]>=6.5",
+  "pytest",
+]
+
+[tool.hatch.envs.default.scripts]
+test = "pytest {args:tests}"
+test-cov = "coverage run -m pytest {args:tests}"
+cov-report = [
+  "- coverage combine",
+  "coverage report",
+]
+cov = [
+  "test-cov",
+  "cov-report",
+]
+
+[[tool.hatch.envs.all.matrix]]
+python = ["3.8", "3.9", "3.10", "3.11"]
+
+[tool.hatch.envs.lint]
+detached = true
+dependencies = [
+  "black>=23.1.0",
+  "mypy>=1.0.0",
+  "ruff>=0.0.243",
+]
+
+[tool.hatch.envs.lint.scripts]
+typing = "mypy --install-types --non-interactive {args:src/python/axserve tests}"
+style = [
+  "ruff {args:.}",
+  "black --check --diff {args:.}",
+]
+fmt = [
+  "black {args:.}",
+  "ruff --fix {args:.}",
+  "style",
+]
+all = [
+  "style",
+  "typing",
+]
+
+[tool.black]
+target-version = ["py38"]
+line-length = 120
+skip-string-normalization = true
 
 [tool.ruff]
-line-length = 88
-
-[tool.ruff.lint]
-extend-select = [
-  "B",    # flake8-bugbear
-  "I",    # isort
-  "PGH",  # pygrep-hooks
-  "RUF",  # Ruff-specific
-  "UP",   # pyupgrade
+target-version = "py38"
+line-length = 120
+select = [
+  "A",
+  "ARG",
+  "B",
+  "C",
+  "DTZ",
+  "E",
+  "EM",
+  "F",
+  "FBT",
+  "I",
+  "ICN",
+  "ISC",
+  "N",
+  "PLC",
+  "PLE",
+  "PLR",
+  "PLW",
+  "Q",
+  "RUF",
+  "S",
+  "T",
+  "TID",
+  "UP",
+  "W",
+  "YTT",
+]
+ignore = [
+  # Allow non-abstract empty methods in abstract base classes
+  "B027",
+  # Allow boolean positional values in function calls, like `dict.get(... True)`
+  "FBT003",
+  # Ignore checks for possible passwords
+  "S105", "S106", "S107",
+  # Ignore complexity
+  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
+]
+unfixable = [
+  # Don't touch unused imports
+  "F401",
 ]
 
-[tool.ruff.lint.isort]
+[tool.ruff.isort]
+known-first-party = ["axserve"]
 force-single-line = true
 lines-between-types = 1
 lines-after-imports = 2
 required-imports = ["from __future__ import annotations"]
 
-[build-system]
-requires = [
-    "poetry-core>=1.0.0",
-    "setuptools",
-    "wheel",
-    "ninja",
-    "cmake>=3.21",
-    "grpcio-tools>=1.59.3",
+[tool.ruff.flake8-tidy-imports]
+ban-relative-imports = "all"
+
+[tool.ruff.per-file-ignores]
+# Tests can use magic values, assertions, and relative imports
+"tests/**/*" = ["PLR2004", "S101", "TID252"]
+
+[tool.coverage.run]
+source_pkgs = ["axserve", "tests"]
+branch = true
+parallel = true
+omit = [
+  "src/python/axserve/__about__.py",
 ]
-build-backend = "poetry.core.masonry.api"
+
+[tool.coverage.paths]
+axserve = ["src/python/axserve"]
+tests = ["tests"]
+
+[tool.coverage.report]
+exclude_lines = [
+  "no cov",
+  "if __name__ == .__main__.:",
+  "if TYPE_CHECKING:",
+]
