--- a/pyproject.toml
+++ b/pyproject.toml
@@ -196,6 +196,9 @@ ban-relative-imports = "all"
 # Tests can use magic values, assertions, and relative imports
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+
 [tool.coverage.run]
 source_pkgs = ["axserve", "tests"]
 branch = true
