Add missing typings of pywin32

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,35 +19,19 @@ repos:
       - id: check-xml
       - id: check-yaml
 
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.20.0
-    hooks:
-      - id: pyupgrade
-
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.6
+    rev: v2.4.1
     hooks:
       - id: codespell
-        args: ["-L", "doubleclick"]
 
   - repo: https://github.com/pre-commit/mirrors-clang-format
-    rev: v17.0.6
+    rev: v20.1.8
     hooks:
       - id: clang-format
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.1.7
+    rev: v0.12.7
     hooks:
-      - id: ruff
-        stages: [manual]
+      - id: ruff-check
         args: ["--fix"]
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.7.1
-    hooks:
-      - id: mypy
-        stages: [manual]
-        additional_dependencies: [
-          types-protobuf,
-          types-pywin32,
-        ]
+      - id : ruff-format
