--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,9 @@ artifacts = ["*.exe"]
 
 [tool.hatch.build.targets.wheel.hooks.custom]
 path = "hatch_build.py"
+dependencies = [
+  "mypy-protobuf",
+]
 
 [[tool.hatch.build.targets.wheel.hooks.custom.generates]]
 sources = ["src/proto/active.proto"]
@@ -92,6 +95,9 @@ dependencies = [
   "grpcio-tools",
   "pytest",
   "pytest-asyncio",
+  "types-protobuf",
+  "types-grpcio",
+  "types-pywin32",
 ]
 
 [tool.hatch.envs.default.scripts]
@@ -113,7 +119,7 @@ python = ["3.10", "3.11", "3.12"]
 detached = true
 dependencies = [
   "black>=23.1.0",
-  "mypy>=1.0.0",
+  "mypy>=1.17.1",
   "ruff>=0.0.243",
 ]
 
@@ -135,52 +141,20 @@ all = [
 
 [tool.codespell]
 skip = "third_party"
-ignore-words-list = [
-  "doubleclick"
+
+[tool.ruff]
+extend-exclude = [
+  "third_party",
+  "typings",
+  "**/*_pb2.py",
+  "**/*_pb2.pyi",
+  "**/*_pb2_grpc.py",
+  "**/*_pb2_grpc.pyi",
 ]
 
 [tool.ruff.lint]
-select = [
-  "A",
-  "ARG",
-  "B",
-  "C",
-  "DTZ",
-  "E",
-  "EM",
-  "F",
-  "FBT",
-  "I",
-  "ICN",
-  "ISC",
-  "N",
-  "PLC",
-  "PLE",
-  "PLR",
-  "PLW",
-  "Q",
-  "RUF",
-  "S",
-  "T",
-  "TID",
-  "UP",
-  "W",
-  "YTT",
-]
-ignore = [
-  # Allow non-abstract empty methods in abstract base classes
-  "B027",
-  # Allow boolean positional values in function calls, like `dict.get(... True)`
-  "FBT003",
-  # Ignore checks for possible passwords
-  "S105", "S106", "S107",
-  # Ignore complexity
-  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
-]
-unfixable = [
-  # Don't touch unused imports
-  "F401",
-]
+select = ["ALL"]
+ignore = ["D1", "PTH123", "ANN", "C90", "PLR09", "F403", "TID252", "COM", "SLF001", "TRY201", "RET504", "PGH003", "TC006"]
 
 [tool.ruff.lint.isort]
 known-first-party = ["axserve"]
@@ -194,11 +168,14 @@ ban-relative-imports = "all"
 
 [tool.ruff.lint.per-file-ignores]
 # Tests can use magic values, assertions, and relative imports
-"tests/**/*" = ["PLR2004", "S101", "TID252"]
+"src/python/axserve/cli/__init__.py" = ["PLC0415"]
+"tests/**/*" = ["PLR2004", "S101", "TID252", "PLC0415"]
 
 [tool.ruff.lint.pyupgrade]
-# Preserve types, even if a file imports `from __future__ import annotations`.
 keep-runtime-typing = true
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
 [tool.mypy]
 files = [
