--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,11 @@
 [build-system]
-requires = ["hatchling"]
+requires = [
+  "hatchling>=1.27.0",
+  "cmake>=4.0.3",
+  "grpcio-tools>=1.73.1",
+  "mypy-protobuf>=3.6.0",
+  "typing_extensions>=4.14.1; python_version < '3.12'",
+]
 build-backend = "hatchling.build"
 
 [project]
@@ -10,12 +16,8 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = "Apache-2.0"
 keywords = ["activex", "com", "ocx", "windows", "grpc", "qt6", "cpp", "python"]
-authors = [
-  { name = "Yunseong Hwang", email = "kika1492@gmail.com" },
-]
-maintainers = [
-  { name = "Yunseong Hwang", email = "kika1492@gmail.com" },
-]
+authors = [{ name = "Yunseong Hwang", email = "kika1492@gmail.com" }]
+maintainers = [{ name = "Yunseong Hwang", email = "kika1492@gmail.com" }]
 classifiers = [
   "Development Status :: 2 - Pre-Alpha",
   "License :: OSI Approved :: Apache Software License",
@@ -36,7 +38,8 @@ dependencies = [
   "grpcio>=1.73.1",
   "protobuf>=6.31.1",
   "wrapt>=1.17.2",
-  "pywin32>=310; platform_system == 'Windows'",
+  "pywin32>=311; platform_system == 'Windows'",
+  "typing_extensions>=4.14.1; python_version < '3.12'",
 ]
 
 [project.urls]
@@ -51,18 +54,15 @@ axserve = "axserve.cli:main"
 path = "src/python/axserve/__about__.py"
 
 [tool.hatch.build]
+packages = ["src/python/axserve"]
 exclude = ["third_party"]
 skip-excluded-dirs = true
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/python/axserve"]
-artifacts = ["*.exe"]
+artifacts = ["src/python/**/*.exe"]
 
 [tool.hatch.build.targets.wheel.hooks.custom]
 path = "hatch_build.py"
-dependencies = [
-  "mypy-protobuf",
-]
 
 [[tool.hatch.build.targets.wheel.hooks.custom.generates]]
 sources = ["src/proto/active.proto"]
@@ -89,58 +89,44 @@ runtime-output-dir = "src/python/axserve/server/exe"
 output-files = ["src/python/axserve/server/exe/axserve-console-x86.exe"]
 marker = "platform_system == 'Windows' and (platform_machine == 'AMD64' or platform_machine == 'x86')"
 
-[tool.hatch.envs.default]
-dependencies = [
-  "coverage[toml]>=6.5",
-  "grpcio-tools",
-  "pytest",
-  "pytest-asyncio",
-  "types-protobuf",
-  "types-grpcio",
-  "types-pywin32",
-]
-
-[tool.hatch.envs.default.scripts]
-test = "pytest {args:tests}"
-test-cov = "coverage run -m pytest {args:tests}"
-cov-report = [
-  "- coverage combine",
-  "coverage report",
-]
-cov = [
-  "test-cov",
-  "cov-report",
-]
-
 [[tool.hatch.envs.all.matrix]]
 python = ["3.10", "3.11", "3.12"]
 
-[tool.hatch.envs.lint]
-detached = true
+[tool.hatch.envs.default]
+dependencies = []
+
+[tool.hatch.envs.test]
 dependencies = [
-  "black>=23.1.0",
-  "mypy>=1.17.1",
-  "ruff>=0.0.243",
+  "pytest>=8.4.1",
+  "pytest-cov>=6.2.1",
+  "pytest-asyncio>=1.1.0",
+  "coverage[toml]>=7.10.1",
 ]
 
+[tool.hatch.envs.test.scripts]
+test = "pytest {args:tests}"
+test-cov = "coverage run -m pytest {args:tests}"
+cov-report = ["coverage combine", "coverage xml", "coverage report"]
+cov = ["test-cov", "cov-report"]
+
+[tool.hatch.envs.lint]
+dependencies = ["ruff>=0.12.7", "mypy>=1.17.1", "reuse>=5.0.2"]
+detached = true
+
 [tool.hatch.envs.lint.scripts]
+check = "ruff check {args:.}"
+check-fix = "ruff check --fix {args:.}"
+format = "ruff format {args:.}"
 typing = "mypy --install-types --non-interactive {args:src/python/axserve tests}"
-style = [
-  "ruff {args:.}",
-  "black --check --diff {args:.}",
-]
-fmt = [
-  "black {args:.}",
-  "ruff --fix {args:.}",
-  "style",
-]
-all = [
-  "style",
-  "typing",
-]
+license = "reuse lint"
+all = ["check-fix", "format", "typing", "license"]
+
+[tool.hatch.envs.doc]
+dependencies = []
 
 [tool.codespell]
 skip = "third_party"
+ignore-words-list = "doubleclick"
 
 [tool.ruff]
 extend-exclude = [
@@ -154,7 +140,21 @@ extend-exclude = [
 
 [tool.ruff.lint]
 select = ["ALL"]
-ignore = ["D1", "PTH123", "ANN", "C90", "PLR09", "F403", "TID252", "COM", "SLF001", "TRY201", "RET504", "PGH003", "TC006"]
+ignore = [
+  "D1",
+  "PTH123",
+  "ANN",
+  "C90",
+  "PLR09",
+  "F403",
+  "TID252",
+  "COM",
+  "SLF001",
+  "TRY201",
+  "RET504",
+  "PGH003",
+  "TC006",
+]
 
 [tool.ruff.lint.isort]
 known-first-party = ["axserve"]
@@ -167,7 +167,6 @@ required-imports = ["from __future__ import annotations"]
 ban-relative-imports = "all"
 
 [tool.ruff.lint.per-file-ignores]
-# Tests can use magic values, assertions, and relative imports
 "src/python/axserve/cli/__init__.py" = ["PLC0415"]
 "tests/**/*" = ["PLR2004", "S101", "TID252", "PLC0415"]
 
@@ -178,15 +177,8 @@ keep-runtime-typing = true
 convention = "google"
 
 [tool.mypy]
-files = [
-  "src/python/axserve",
-  "tests",
-]
-exclude = [
-    "_pb2\\.py$",
-    "_pb2\\.pyi$",
-    "_pb2_grpc\\.py$",
-]
+files = ["src/python/axserve", "tests"]
+exclude = ["_pb2\\.py$", "_pb2\\.pyi$", "_pb2_grpc\\.py$", "_pb2_grpc\\.pyi$"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -199,17 +191,11 @@ exclude = ["build", "dist", "third_party"]
 source_pkgs = ["axserve", "tests"]
 branch = true
 parallel = true
-omit = [
-  "src/python/axserve/__about__.py",
-]
+omit = ["src/python/axserve/__about__.py"]
 
 [tool.coverage.paths]
 axserve = ["src/python/axserve"]
 tests = ["tests"]
 
 [tool.coverage.report]
-exclude_lines = [
-  "no cov",
-  "if __name__ == .__main__.:",
-  "if TYPE_CHECKING:",
-]
+exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
